@@ -1,3 +1,6 @@
+2002-09-25 Eric Gerbier <gerbier@users.sourceforge.net> 0.7.0
+	* work on local dir, thanks to Valery Reznic
+
 2002-09-23 Eric Gerbier <gerbier@users.sourceforge.net> 0.6.0
 	* add triggers (thanks to Han Holl <han.holl@prismant.nl>
 	* add many other spec tags (icon, exlude*, serial, provides, conflicts)
